--- a/src/components/checkbox-list/checkbox-list.scss
+++ b/src/components/checkbox-list/checkbox-list.scss
@@ -1,4 +1,5 @@
 .checkbox-list {
-    display: grid;
-    grid-template-columns: 3;
+    // display: grid;
+    // grid-template-columns: 3;
+    margin-top: 16.56px;
 }
