--- a/src/pages/form-elements/form-elements.scss
+++ b/src/pages/form-elements/form-elements.scss
@@ -16,6 +16,7 @@
         'a d d';
     width: 1440px-141px-141px;
     margin-top: 143px;
+    align-content: flex-start;
 }
 
 .form-elements__area-a {
@@ -27,7 +28,7 @@
     //     'ab'
     //     'ac';
     margin-left: 140.5px;
-    // grid-template-columns: min-content;
+    align-content: flex-start;
     grid-template-rows: 84px 84px 86.56px 104px 105px 105px 164px 320px 64px 306px 154px;
     width: 320px;
     .titles-container {
